package controller;

import view.MainFrame;

public class Main {
    public static void main(String[] args) {
        new MainFrame();
    }
}
