package model;

public class Arbol extends Entity {

    public Arbol(int x, int y) {
        super(x, y, uploadImage("sprites/features/tree.png"));

    }

    @Override
    public void update() {

    }
}
