package model;

import java.awt.image.BufferedImage;

public class Pablo extends Entity {
    public Pablo(int x, int y, BufferedImage sprite) {
        super(x, y, sprite);
    }
    

    @Override
    public void update() {

    }
    //private static final String SPRITE = "ghost_red.png";
}
