package view;

import javax.swing.*;

public class PanelReglas extends JPanel {
}
